# ncbi-toolkit

./: .gitattributes  README.md  configure
src/algo/align/: CMakeLists.txt
src/algo/gnomon/: CMakeLists.gnomon.asn.txt  CMakeLists.txt
src/algo/id_mapper/: CMakeLists.id_mapper.lib.txt  CMakeLists.txt  id_mapper.cpp
src/algo/ms/: CMakeLists.txt
src/algo/seqqa/: CMakeLists.txt  CMakeLists.xalgoseqqa.lib.txt  blastp_tests.cpp
src/algo/sequence/: CMakeLists.txt  CMakeLists.xalgoseq.lib.txt  Makefile.xalgoseq.lib  feature_generator.hpp  gene_model.cpp  transform_align.cpp
src/algo/volume_merge/: CMakeLists.txt  CMakeLists.xalgovmerge.lib.txt  Makefile.xalgovmerge.lib
src/build-system/: CMakeLists.txt  Makefile.app.in  Makefile.configurables.real  Makefile.dll.in  Makefile.flat_tuneups  Makefile.meta.gmake=yes  Makefile.meta_l  Makefile.metal.in  Makefile.metal.tmpl.in  Makefile.mk.in  Makefile.protobuf.in  Makefile.rules.in  Makefile.xcode.tmpl  configure  configure.ac  install.sh.in  library_relations.txt  new_module.sh.in  project_tree_builder.ini  relocate.sh.in  run_with_cd_reporter.py.in
src/build-system/cmake/: CMake.NCBIComponents.cmake  CMake.NCBIComponentsMSVC.cmake  CMake.NCBIComponentsUNIX.cmake  CMake.NCBIComponentsXCODE.cmake  CMake.NCBIptb.cmake  CMake.NCBItoolkit.cmake  CMakeChecks.basic-checks.cmake  CMakeChecks.cmake  CMakeChecks.compiler.cmake  TestDriver.cmake  cmake-cfg-unix.sh  cmake-cfg-vs.bat  cmake-cfg-xcode.sh  config.cmake.h.in
src/build-system/project_tree_builder/: CMakeLists.project_tree_builder.app.txt  CMakeLists.txt  mac_prj_generator.cpp  mac_prj_generator.hpp  msvc_configure.cpp  msvc_makefile.cpp  msvc_makefile.hpp  msvc_prj_utils.cpp  msvc_site.cpp  prj_file_collector.cpp  proj_builder_app.cpp  proj_builder_app.hpp  proj_item.cpp  proj_item.hpp  proj_src_resolver.cpp  proj_tree.cpp  proj_tree_builder.cpp  proj_tree_builder.hpp
src/cgi/: CMakeLists.cgi.lib.txt  CMakeLists.fcgi.lib.txt  CMakeLists.txt  cgiapp.cpp  cgictx.cpp  fcgi_run.cpp  ncbires.cpp  user_agent.cpp
src/cgi/test/: CMakeLists.cgi_io_test.app.txt  CMakeLists.cgitest.app.txt  CMakeLists.test_cgi_entry_reader.app.txt  CMakeLists.test_multipart_cgi.app.txt  CMakeLists.test_user_agent.app.txt  CMakeLists.txt  cgitest.cpp  test_user_agent.cpp
src/ctools/ctransition/: CMakeLists.ctransition.lib.txt  CMakeLists.ctransition_nlmzip.lib.txt  CMakeLists.txt  Makefile.ctransition.lib  Makefile.ctransition_nlmzip.lib  Makefile.in  ct_ncbierr.cpp  ct_ncbimem.cpp  ct_ncbistr.cpp  ct_nlmzip_bits.cpp  ct_nlmzip_dcompr.cpp  ct_nlmzip_deflate.cpp  ct_nlmzip_i.h  ct_nlmzip_inflate.cpp  ct_nlmzip_streamprocs.cpp  ct_nlmzip_trees.cpp  ct_nlmzip_util.cpp
src/db/: CMakeLists.txt
src/db/bdb/: CMakeLists.bdb.lib.txt  CMakeLists.ncbi_xcache_bdb.lib.txt  CMakeLists.txt  bdb_blobcache.cpp  bdb_env.cpp  bdb_file.cpp
src/db/sqlite/: CMakeLists.sqlitewrapp.lib.txt  CMakeLists.txt  sqlitewrapp.cpp
src/dbapi/lang_bind/: CMakeLists.txt
src/dbapi/simple/: CMakeLists.sdbapi.lib.txt  CMakeLists.txt  sdbapi.cpp
src/html/: CMakeLists.html.lib.txt  CMakeLists.txt
src/html/demo/: CMakeLists.demo_html.app.txt  CMakeLists.demo_html_template.app.txt  CMakeLists.txt
src/html/test/: CMakeLists.test_html.app.txt  CMakeLists.txt
src/misc/discrepancy/: CMakeLists.discrepancy.lib.txt  CMakeLists.txt  Makefile.discrepancy.lib  biosource_tests.cpp  discrepancy_case.cpp  discrepancy_context.cpp  discrepancy_core.cpp  discrepancy_core.hpp  division_code_conflicts.cpp  feature_per_bioseq.cpp  feature_tests.cpp  gene_names.cpp  overlapping_features.cpp  pub_tests.cpp  report_object.cpp  rna_names.cpp  seqdesc_per_bioseq.cpp  sequence_tests.cpp  sesame_street.cpp  suspect_product_names.cpp  text_output.cpp  transl_note.cpp  transl_too_long.cpp  utils.cpp  utils.hpp
src/misc/eutils_client/: CMakeLists.eutils_client.lib.txt  CMakeLists.txt  Makefile.eutils_client.lib  Makefile.in  eutils_client.cpp
src/misc/hgvs/: CMakeLists.hgvs_parser.lib.txt  CMakeLists.txt  objcoords.cpp
src/objects/entrez2/: CMakeLists.entrez2.asn.txt  CMakeLists.entrez2cli.lib.txt  CMakeLists.txt
src/objects/general/: CMakeLists.general.asn.txt  CMakeLists.txt  Dbtag.cpp
src/objects/genomecoll/: CMakeLists.gencoll_client.asn.txt  CMakeLists.genome_collection.asn.txt  CMakeLists.txt  gencoll_client.asn  genome_collection.asn  genomic_collections_cli.cpp
src/objects/id1/: CMakeLists.id1.asn.txt  CMakeLists.id1cli.lib.txt  CMakeLists.txt
src/objects/macro/: CMakeLists.macro.asn.txt  CMakeLists.txt  Search_func.cpp  Simple_replace.cpp  String_constraint.cpp  Suspect_rule_set.cpp
src/objects/ncbimime/: CMakeLists.ncbimime.asn.txt  CMakeLists.txt
src/objects/seq/: CMakeLists.seq.asn.txt  CMakeLists.txt  Seq_gap.cpp  seq.asn  seq_id_tree.cpp  seq_id_tree.hpp  seq_loc_mapper_base.cpp  so_map.cpp  sofa_map.cpp
src/objects/seqset/: CMakeLists.seqset.asn.txt  CMakeLists.txt
src/objects/variation_libs/: CMakeLists.txt
src/objmgr/: CMakeLists.objmgr.lib.txt  CMakeLists.txt  annot_collector.cpp  annot_selector.cpp  bioseq_base_info.cpp  bioseq_handle.cpp  bioseq_info.cpp  bioseq_set_handle.cpp  bioseq_set_info.cpp  data_loader.cpp  data_source.cpp  scope.cpp  scope_impl.cpp  scope_info.cpp  seq_annot_info.cpp  seq_entry_handle.cpp  seq_entry_info.cpp  seq_loc_mapper.cpp  seq_map.cpp  tse_handle.cpp  tse_info.cpp
src/objmgr/split/: CMakeLists.id2_split.lib.txt  CMakeLists.txt  annot_piece.cpp  blob_splitter_impl.cpp  blob_splitter_maker.cpp  id_range.cpp  object_splitinfo.cpp  size.cpp
src/objmgr/test/: CMakeLists.test_objmgr.app.txt  CMakeLists.test_objmgr_basic.app.txt  CMakeLists.test_objmgr_mt.app.txt  CMakeLists.test_objmgr_sv.app.txt  CMakeLists.txt  (+2 more)
src/serial/: CMakeLists.cserial.lib.txt  CMakeLists.serial.lib.txt  CMakeLists.txt  choice.cpp  classinfo.cpp  classinfob.cpp  member.cpp  objistr.cpp  objistrasn.cpp  objistrasnb.cpp  objistrxml.cpp  objostr.cpp  objostrasn.cpp  objostrasnb.cpp  objostrjson.cpp  objostrxml.cpp  objstack.cpp  rpcbase.cpp  serial.cpp  stdtypes.cpp  typeinfo.cpp  variant.cpp
(+3596 files in other folders)
