#############################################################################
# $Id: CMakeLists.txt 565521 2018-06-13 13:04:30Z gouriano $
#############################################################################

NCBI_add_subdirectory(bdb sqlite)
# 
#

# Include projects from this directory

# Recurse subdirectories
#add_subdirectory(sqlite)
#add_subdirectory(bdb)
