#############################################################################
# $Id: CMakeLists.txt 566834 2018-07-09 12:39:41Z gouriano $
#############################################################################

NCBI_add_subdirectory(formats omssa)

# Include projects from this directory

# Recurse subdirectories
#add_subdirectory(formats)
#add_subdirectory(omssa)
