#############################################################################
# $Id: CMakeLists.txt 566834 2018-07-09 12:39:41Z gouriano $
#############################################################################

NCBI_add_library(xalgoseqqa)
NCBI_add_subdirectory(demo)

# Include projects from this directory
#include(CMakeLists.xalgoseqqa.lib.txt)

# Recurse subdirectories
#add_subdirectory(demo )
