#############################################################################
# $Id: CMakeLists.txt 566834 2018-07-09 12:39:41Z gouriano $
#############################################################################

NCBI_add_library(xalgovmerge)
NCBI_add_subdirectory(test)

# Include projects from this directory
#include(CMakeLists.xalgovmerge.lib.txt)

# Recurse subdirectories
#add_subdirectory(test )
