#############################################################################
# $Id: CMakeLists.txt 566383 2018-06-28 16:50:31Z gouriano $
#############################################################################


NCBI_add_library(discrepancy)
#NCBI_add_subdirectory(unit_test)


##############################################################################
# 
#

# Include projects from this directory
#include(CMakeLists.discrepancy.lib.txt)

# Recurse subdirectories
#add_subdirectory(unit_test )
