#############################################################################
# $Id: CMakeLists.txt 564454 2018-05-29 13:35:44Z gouriano $
#############################################################################

NCBI_add_subdirectory(dbsnp)

# Include projects from this directory
#add_subdirectory(dbsnp)

