#############################################################################
# $Id: CMakeLists.txt 565603 2018-06-14 13:44:37Z gouriano $
#############################################################################


NCBI_add_library(util)
NCBI_add_subdirectory(unit_test)
# 
#

# Include projects from this directory
#include(CMakeLists.util.lib.txt)

# Recurse subdirectories
#add_subdirectory(unit_test )
